--- a/LyonJUG/src/lyonjug/Sample.fxml
+++ b/LyonJUG/src/lyonjug/Sample.fxml
@@ -8,13 +8,18 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane id="AnchorPane" prefHeight="200.0" prefWidth="320.0" xmlns:fx="http://javafx.com/fxml" fx:controller="lyonjug.SampleController">
-  <children>
-    <Label fx:id="label" layoutX="126.0" layoutY="120.0" minHeight="16.0" minWidth="69.0" />
-    <Button fx:id="button" layoutX="126.0" layoutY="121.0" onAction="#handleButtonAction" text="Spin Me!" />
-    <ImageView fx:id="logo" fitHeight="150.0" fitWidth="200.0" layoutX="61.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
-      <image>
-        <Image url="@logo.gif" preserveRatio="false" smooth="false" />
-      </image>
-    </ImageView>
-  </children>
+    <children>
+        <Label fx:id="label" layoutX="126.0" layoutY="120.0" minHeight="16.0" minWidth="69.0" />
+        <Group fx:id="group">
+            <children>
+                <ImageView fx:id="logo" fitHeight="150.0" fitWidth="200.0" layoutX="61.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@logo.gif" preserveRatio="false" smooth="false" />
+                    </image>    
+                </ImageView>
+
+            </children>
+        </Group>
+        <Button fx:id="button" layoutX="126.0" layoutY="121.0" onAction="#handleButtonAction" text="Spin Me!" />
+    </children>
 </AnchorPane>
